CSS tweak to fix mis-alignment on home page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -17,7 +17,7 @@
     @include plaintext-font();
     @include font-size-tiny();
     padding: 10px;
-    margin: { left: 32px; top: 6px; }
+    margin: { left: 0px; top: 6px; }
     width: 114px;
   }
 
